fix footer buttons contrast ratio

--- a/source/layout/footer.css
+++ b/source/layout/footer.css
@@ -16,7 +16,7 @@ button {
   margin-right: 8px;
   background: transparent;
   border: none;
-  color: rgba(0,0,0,0.2);
+  color: rgba(0,0,0,0.5);
   -webkit-transition: all .3s; /* Safari */
   transition: all .3s;
 }
